zeroidc/vendor/wasm-bindgen-macro/ui-tests/start-function.stderr
error: the start function cannot have arguments
 --> ui-tests/start-function.rs:7:13
  |
7 | pub fn foo2(x: u32) {}
  |             ^^^^^^

error: the start function cannot have generics
  --> ui-tests/start-function.rs:10:12
   |
10 | pub fn foo3<T>() {}
   |            ^^^

error[E0277]: the trait bound `Result<wasm_bindgen::JsValue, ()>: wasm_bindgen::__rt::Start` is not satisfied
    --> ui-tests/start-function.rs:15:1
     |
15   | #[wasm_bindgen(start)]
     | ^^^^^^^^^^^^^^^^^^^^^^ the trait `wasm_bindgen::__rt::Start` is not implemented for `Result<wasm_bindgen::JsValue, ()>`
     |
     = help: the following implementations were found:
               <Result<(), E> as wasm_bindgen::__rt::Start>
note: required by `start`
    --> $WORKSPACE/src/lib.rs
     |
     |         fn start(self);
     |         ^^^^^^^^^^^^^^^
     = note: this error originates in the attribute macro `wasm_bindgen` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Result<wasm_bindgen::JsValue, wasm_bindgen::JsValue>: wasm_bindgen::__rt::Start` is not satisfied
    --> ui-tests/start-function.rs:18:1
     |
18   | #[wasm_bindgen(start)]
     | ^^^^^^^^^^^^^^^^^^^^^^ the trait `wasm_bindgen::__rt::Start` is not implemented for `Result<wasm_bindgen::JsValue, wasm_bindgen::JsValue>`
     |
     = help: the following implementations were found:
               <Result<(), E> as wasm_bindgen::__rt::Start>
note: required by `start`
    --> $WORKSPACE/src/lib.rs
     |
     |         fn start(self);
     |         ^^^^^^^^^^^^^^^
     = note: this error originates in the attribute macro `wasm_bindgen` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Result<wasm_bindgen::JsValue, ()>: wasm_bindgen::__rt::Start` is not satisfied
    --> ui-tests/start-function.rs:27:1
     |
27   | #[wasm_bindgen(start)]
     | ^^^^^^^^^^^^^^^^^^^^^^ the trait `wasm_bindgen::__rt::Start` is not implemented for `Result<wasm_bindgen::JsValue, ()>`
     |
     = help: the following implementations were found:
               <Result<(), E> as wasm_bindgen::__rt::Start>
note: required by `start`
    --> $WORKSPACE/src/lib.rs
     |
     |         fn start(self);
     |         ^^^^^^^^^^^^^^^
     = note: this error originates in the attribute macro `wasm_bindgen` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Result<wasm_bindgen::JsValue, wasm_bindgen::JsValue>: wasm_bindgen::__rt::Start` is not satisfied
    --> ui-tests/start-function.rs:30:1
     |
30   | #[wasm_bindgen(start)]
     | ^^^^^^^^^^^^^^^^^^^^^^ the trait `wasm_bindgen::__rt::Start` is not implemented for `Result<wasm_bindgen::JsValue, wasm_bindgen::JsValue>`
     |
     = help: the following implementations were found:
               <Result<(), E> as wasm_bindgen::__rt::Start>
note: required by `start`
    --> $WORKSPACE/src/lib.rs
     |
     |         fn start(self);
     |         ^^^^^^^^^^^^^^^
     = note: this error originates in the attribute macro `wasm_bindgen` (in Nightly builds, run with -Z macro-backtrace for more info)
